[package]
name = "test_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.53.0"
features = ["Win32_System", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_ProcessStatus"]
